--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -16,7 +16,7 @@ a{
 	color: #FFF;
 }
 h1{
-	2em;
+	font-size: 2em;
 	font-weight: normal;
 }
 /*----------------------------------------------------------------------------------------*/
@@ -61,8 +61,18 @@ h1{
 
 }
 
+.profile-table{
+	width: 26px;
+	height: 26px;
+	border-radius: 20%;
+}
+
 .central-box{
 	margin: 40px;
+}
+
+.cinza{
+	color: #555;
 }
 
 /*----------------------------------------------------------------------------------------*/
@@ -117,4 +127,136 @@ h1{
 	background-color: #fcf8e3;
 	border-color: #faebcc;
 	border-radius: 4px;
+}
+
+/*----------------------------------------------------------------------------------------*/
+
+.tabela{
+	border-collapse: collapse;
+	background-color: #FFF;
+	border-radius: 5px;
+}
+	@media (min-width: 600px){
+		.tabela{
+			width: 60%;
+		}
+	}
+	
+.tabela td, .tabela th{
+	padding: 8px;
+	color: #333;
+}
+
+.tabela tr:nth-child(odd) {
+	
+}
+
+.tabela tr:nth-child(even) {
+	background: #efefef;
+}
+
+/*----------------------------------------------------------------------------------------*/
+
+
+/*----------------------------------------------------------------------------------------
+
+	Bootstrap Pagination
+
+----------------------------------------------------------------------------------------*/
+
+.pagination {
+  display: inline-block;
+  padding-left: 0;
+  margin: 20px 0;
+  border-radius: 4px;
+}
+.pagination > li {
+  display: inline;
+}
+.pagination > li > a,
+.pagination > li > span {
+  position: relative;
+  float: left;
+  padding: 6px 12px;
+  margin-left: -1px;
+  line-height: 1.42857143;
+  color: #337ab7;
+  text-decoration: none;
+  background-color: #fff;
+  border: 1px solid #ddd;
+}
+.pagination > li:first-child > a,
+.pagination > li:first-child > span {
+  margin-left: 0;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
+.pagination > li:last-child > a,
+.pagination > li:last-child > span {
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+.pagination > li > a:hover,
+.pagination > li > span:hover,
+.pagination > li > a:focus,
+.pagination > li > span:focus {
+  z-index: 3;
+  color: #23527c;
+  background-color: #eee;
+  border-color: #ddd;
+}
+.pagination > .active > a,
+.pagination > .active > span,
+.pagination > .active > a:hover,
+.pagination > .active > span:hover,
+.pagination > .active > a:focus,
+.pagination > .active > span:focus {
+  z-index: 2;
+  color: #fff;
+  cursor: default;
+  background-color: #337ab7;
+  border-color: #337ab7;
+}
+.pagination > .disabled > span,
+.pagination > .disabled > span:hover,
+.pagination > .disabled > span:focus,
+.pagination > .disabled > a,
+.pagination > .disabled > a:hover,
+.pagination > .disabled > a:focus {
+  color: #777;
+  cursor: not-allowed;
+  background-color: #fff;
+  border-color: #ddd;
+}
+.pagination-lg > li > a,
+.pagination-lg > li > span {
+  padding: 10px 16px;
+  font-size: 18px;
+  line-height: 1.3333333;
+}
+.pagination-lg > li:first-child > a,
+.pagination-lg > li:first-child > span {
+  border-top-left-radius: 6px;
+  border-bottom-left-radius: 6px;
+}
+.pagination-lg > li:last-child > a,
+.pagination-lg > li:last-child > span {
+  border-top-right-radius: 6px;
+  border-bottom-right-radius: 6px;
+}
+.pagination-sm > li > a,
+.pagination-sm > li > span {
+  padding: 5px 10px;
+  font-size: 12px;
+  line-height: 1.5;
+}
+.pagination-sm > li:first-child > a,
+.pagination-sm > li:first-child > span {
+  border-top-left-radius: 3px;
+  border-bottom-left-radius: 3px;
+}
+.pagination-sm > li:last-child > a,
+.pagination-sm > li:last-child > span {
+  border-top-right-radius: 3px;
+  border-bottom-right-radius: 3px;
 }
